// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction-details bridge snapshots should render completed bridge snapshot 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="bridge__container"
    >
      <div
        class="mm-box mm-header-base multichain-page-header bridge__header mm-box--padding-4 mm-box--display-flex mm-box--justify-content-center mm-box--width-full"
      >
        <div
          class="mm-box"
          style="min-width: 0px;"
        >
          <button
            aria-label="Back"
            class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/arrow-left.svg');"
            />
          </button>
        </div>
        <div
          class="mm-box"
        >
          <p
            class="mm-box mm-text mm-text--body-md-bold mm-text--ellipsis mm-text--text-align-center mm-box--padding-inline-start-8 mm-box--padding-inline-end-8 mm-box--display-block mm-box--color-text-default"
          >
            Bridge
             details
          </p>
        </div>
      </div>
      <div
        class="mm-box multichain-page-content bridge-transaction-details__content mm-box--padding-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--height-full"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-xl mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
            >
              View on PolygonScan
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/export.svg');"
              />
            </button>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-xl mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
            >
              View on Optimism Explorer
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/export.svg');"
              />
            </button>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Status
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--text-transform-capitalize mm-box--color-success-default"
                >
                  complete
                </p>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Bridging
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-wrap-wrap mm-box--justify-content-flex-end mm-box--align-items-center"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Polygon logo"
                        class="mm-avatar-network__network-image"
                        src="./images/pol-token.svg"
                      />
                    </div>
                    Polygon
                  </div>
                  <span
                    class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                    style="mask-image: url('./images/icons/arrow-2-right.svg');"
                  />
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="OP Mainnet logo"
                        class="mm-avatar-network__network-image"
                        src="./images/optimism.svg"
                      />
                    </div>
                    OP Mainnet
                  </div>
                </div>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Time stamp
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                Jun 20, 2025 at 05:43 PM
              </p>
            </div>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                You sent
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-wrap-wrap mm-box--justify-content-flex-end mm-box--align-items-center"
                >
                  2 USDC on
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Polygon logo"
                        class="mm-avatar-network__network-image"
                        src="./images/pol-token.svg"
                      />
                    </div>
                    Polygon
                  </div>
                </div>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Total gas fee
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box currency-display-component mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
                  title="0.004455 ETH"
                >
                  <span
                    class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
                    data-testid="account-value-and-suffix"
                  >
                    0.004455
                  </span>
                  <span
                    class="mm-box mm-text currency-display-component__suffix mm-text--inherit mm-box--margin-inline-start-1 mm-box--color-text-default"
                  >
                    ETH
                  </span>
                </div>
              </p>
            </div>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Nonce
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                3
              </p>
            </div>
            <div
              class="transaction-activity-log transaction-list-item-details__transaction-activity-log"
            >
              <div
                class="transaction-activity-log__title"
              >
                Activity log
              </div>
              <div
                class="transaction-activity-log__activities-container"
              >
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/add.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction created with a value of 0 ETH at 17:43 on 6/20/2025."
                    >
                      Transaction created with a value of 0 ETH at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/arrow-up.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction submitted with estimated gas fee of 0 ETH at 17:43 on 6/20/2025."
                    >
                      Transaction submitted with estimated gas fee of 0 ETH at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/check.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction confirmed at 17:43 on 6/20/2025."
                    >
                      Transaction confirmed at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`transaction-details bridge snapshots should render confirmed bridge snapshot 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="bridge__container"
    >
      <div
        class="mm-box mm-header-base multichain-page-header bridge__header mm-box--padding-4 mm-box--display-flex mm-box--justify-content-center mm-box--width-full"
      >
        <div
          class="mm-box"
          style="min-width: 0px;"
        >
          <button
            aria-label="Back"
            class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/arrow-left.svg');"
            />
          </button>
        </div>
        <div
          class="mm-box"
        >
          <p
            class="mm-box mm-text mm-text--body-md-bold mm-text--ellipsis mm-text--text-align-center mm-box--padding-inline-start-8 mm-box--padding-inline-end-8 mm-box--display-block mm-box--color-text-default"
          >
            Bridge
             details
          </p>
        </div>
      </div>
      <div
        class="mm-box multichain-page-content bridge-transaction-details__content mm-box--padding-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--height-full"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
        >
          <div
            class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
          >
            <span
              class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
              style="mask-image: url('./images/icons/danger.svg');"
            />
            <div
              class="mm-box mm-box--min-width-0"
            >
              <p
                class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
              >
                Has it been longer than 3 hours?
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--display-flex mm-box--align-items-center mm-box--color-text-default"
              >
                Reach out to
                 
                <a
                  class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://support.metamask.io"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  MetaMask Support
                </a>
                .
              </p>
            </div>
          </div>
          <div
            class="mm-box bridge-transaction-details__step-grid"
          >
            <div
              class="mm-box"
              style="position: relative;"
            >
              <div
                class="mm-box bridge-transaction-details__icon-loading mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-primary-muted mm-box--rounded-full"
                style="width: 2rem; height: 2rem;"
              />
              <span
                class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block"
                style="height: 12px; width: 12px; border-radius: 50%; z-index: 1; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); border-width: 2px;"
              />
            </div>
            <div
              class="mm-box bridge-transaction-details__step-grid--desc mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                05:43 PM
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-default"
              >
                Receiving USDC on OP Mainnet
              </p>
            </div>
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-xl mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
            >
              View on PolygonScan
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/export.svg');"
              />
            </button>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-xl mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
            >
              View on Optimism Explorer
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/export.svg');"
              />
            </button>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Status
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--text-transform-capitalize mm-box--color-warning-default"
                >
                  pending
                </p>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Bridging
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-wrap-wrap mm-box--justify-content-flex-end mm-box--align-items-center"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Polygon logo"
                        class="mm-avatar-network__network-image"
                        src="./images/pol-token.svg"
                      />
                    </div>
                    Polygon
                  </div>
                  <span
                    class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                    style="mask-image: url('./images/icons/arrow-2-right.svg');"
                  />
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="OP Mainnet logo"
                        class="mm-avatar-network__network-image"
                        src="./images/optimism.svg"
                      />
                    </div>
                    OP Mainnet
                  </div>
                </div>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Time stamp
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                Jun 20, 2025 at 05:43 PM
              </p>
            </div>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                You sent
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-wrap-wrap mm-box--justify-content-flex-end mm-box--align-items-center"
                >
                  2 USDC on
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Polygon logo"
                        class="mm-avatar-network__network-image"
                        src="./images/pol-token.svg"
                      />
                    </div>
                    Polygon
                  </div>
                </div>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Total gas fee
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box currency-display-component mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
                  title="0.004455 ETH"
                >
                  <span
                    class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
                    data-testid="account-value-and-suffix"
                  >
                    0.004455
                  </span>
                  <span
                    class="mm-box mm-text currency-display-component__suffix mm-text--inherit mm-box--margin-inline-start-1 mm-box--color-text-default"
                  >
                    ETH
                  </span>
                </div>
              </p>
            </div>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Nonce
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                3
              </p>
            </div>
            <div
              class="transaction-activity-log transaction-list-item-details__transaction-activity-log"
            >
              <div
                class="transaction-activity-log__title"
              >
                Activity log
              </div>
              <div
                class="transaction-activity-log__activities-container"
              >
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/add.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction created with a value of 0 ETH at 17:43 on 6/20/2025."
                    >
                      Transaction created with a value of 0 ETH at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/arrow-up.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction submitted with estimated gas fee of 0 ETH at 17:43 on 6/20/2025."
                    >
                      Transaction submitted with estimated gas fee of 0 ETH at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/check.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction confirmed at 17:43 on 6/20/2025."
                    >
                      Transaction confirmed at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`transaction-details bridge snapshots should render failed on dest bridge snapshot 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="bridge__container"
    >
      <div
        class="mm-box mm-header-base multichain-page-header bridge__header mm-box--padding-4 mm-box--display-flex mm-box--justify-content-center mm-box--width-full"
      >
        <div
          class="mm-box"
          style="min-width: 0px;"
        >
          <button
            aria-label="Back"
            class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/arrow-left.svg');"
            />
          </button>
        </div>
        <div
          class="mm-box"
        >
          <p
            class="mm-box mm-text mm-text--body-md-bold mm-text--ellipsis mm-text--text-align-center mm-box--padding-inline-start-8 mm-box--padding-inline-end-8 mm-box--display-block mm-box--color-text-default"
          >
            Bridge
             details
          </p>
        </div>
      </div>
      <div
        class="mm-box multichain-page-content bridge-transaction-details__content mm-box--padding-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--height-full"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
        >
          <div
            class="mm-box bridge-transaction-details__step-grid"
          >
            <div
              class="mm-box bridge-transaction-details__step-grid--desc mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                05:43 PM
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-normal mm-box--color-text-alternative"
              >
                Receiving USDC on OP Mainnet
              </p>
            </div>
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-xl mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
            >
              View on PolygonScan
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/export.svg');"
              />
            </button>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-xl mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
            >
              View on Optimism Explorer
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/export.svg');"
              />
            </button>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Status
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--text-transform-capitalize mm-box--color-error-default"
                >
                  failed
                </p>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Bridging
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-wrap-wrap mm-box--justify-content-flex-end mm-box--align-items-center"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Polygon logo"
                        class="mm-avatar-network__network-image"
                        src="./images/pol-token.svg"
                      />
                    </div>
                    Polygon
                  </div>
                  <span
                    class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                    style="mask-image: url('./images/icons/arrow-2-right.svg');"
                  />
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="OP Mainnet logo"
                        class="mm-avatar-network__network-image"
                        src="./images/optimism.svg"
                      />
                    </div>
                    OP Mainnet
                  </div>
                </div>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Time stamp
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                Jun 20, 2025 at 05:43 PM
              </p>
            </div>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                You sent
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-wrap-wrap mm-box--justify-content-flex-end mm-box--align-items-center"
                >
                  2 USDC on
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Polygon logo"
                        class="mm-avatar-network__network-image"
                        src="./images/pol-token.svg"
                      />
                    </div>
                    Polygon
                  </div>
                </div>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Total gas fee
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box currency-display-component mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
                  title="0.004455 ETH"
                >
                  <span
                    class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
                    data-testid="account-value-and-suffix"
                  >
                    0.004455
                  </span>
                  <span
                    class="mm-box mm-text currency-display-component__suffix mm-text--inherit mm-box--margin-inline-start-1 mm-box--color-text-default"
                  >
                    ETH
                  </span>
                </div>
              </p>
            </div>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Nonce
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                3
              </p>
            </div>
            <div
              class="transaction-activity-log transaction-list-item-details__transaction-activity-log"
            >
              <div
                class="transaction-activity-log__title"
              >
                Activity log
              </div>
              <div
                class="transaction-activity-log__activities-container"
              >
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/add.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction created with a value of 0 ETH at 17:43 on 6/20/2025."
                    >
                      Transaction created with a value of 0 ETH at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/arrow-up.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction submitted with estimated gas fee of 0 ETH at 17:43 on 6/20/2025."
                    >
                      Transaction submitted with estimated gas fee of 0 ETH at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/check.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction confirmed at 17:43 on 6/20/2025."
                    >
                      Transaction confirmed at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`transaction-details bridge snapshots should render failed on src bridge snapshot 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="bridge__container"
    >
      <div
        class="mm-box mm-header-base multichain-page-header bridge__header mm-box--padding-4 mm-box--display-flex mm-box--justify-content-center mm-box--width-full"
      >
        <div
          class="mm-box"
          style="min-width: 0px;"
        >
          <button
            aria-label="Back"
            class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/arrow-left.svg');"
            />
          </button>
        </div>
        <div
          class="mm-box"
        >
          <p
            class="mm-box mm-text mm-text--body-md-bold mm-text--ellipsis mm-text--text-align-center mm-box--padding-inline-start-8 mm-box--padding-inline-end-8 mm-box--display-block mm-box--color-text-default"
          >
            Bridge
             details
          </p>
        </div>
      </div>
      <div
        class="mm-box multichain-page-content bridge-transaction-details__content mm-box--padding-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--height-full"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
        >
          <div
            class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
          >
            <span
              class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
              style="mask-image: url('./images/icons/danger.svg');"
            />
            <div
              class="mm-box mm-box--min-width-0"
            >
              <p
                class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
              >
                Has it been longer than 3 hours?
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--display-flex mm-box--align-items-center mm-box--color-text-default"
              >
                Reach out to
                 
                <a
                  class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://support.metamask.io"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  MetaMask Support
                </a>
                .
              </p>
            </div>
          </div>
          <div
            class="mm-box bridge-transaction-details__step-grid"
          >
            <div
              class="mm-box"
              style="position: relative;"
            >
              <div
                class="mm-box bridge-transaction-details__icon-loading mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-primary-muted mm-box--rounded-full"
                style="width: 2rem; height: 2rem;"
              />
              <span
                class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block"
                style="height: 12px; width: 12px; border-radius: 50%; z-index: 1; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); border-width: 2px;"
              />
            </div>
            <div
              class="mm-box bridge-transaction-details__step-grid--desc mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                05:43 PM
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-default"
              >
                Receiving USDC on OP Mainnet
              </p>
            </div>
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-xl mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
            >
              View on PolygonScan
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/export.svg');"
              />
            </button>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-xl mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
            >
              View on Optimism Explorer
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/export.svg');"
              />
            </button>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Status
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--text-transform-capitalize mm-box--color-warning-default"
                >
                  pending
                </p>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Bridging
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-wrap-wrap mm-box--justify-content-flex-end mm-box--align-items-center"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Polygon logo"
                        class="mm-avatar-network__network-image"
                        src="./images/pol-token.svg"
                      />
                    </div>
                    Polygon
                  </div>
                  <span
                    class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                    style="mask-image: url('./images/icons/arrow-2-right.svg');"
                  />
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="OP Mainnet logo"
                        class="mm-avatar-network__network-image"
                        src="./images/optimism.svg"
                      />
                    </div>
                    OP Mainnet
                  </div>
                </div>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Time stamp
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                Jun 20, 2025 at 05:43 PM
              </p>
            </div>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                You sent
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-wrap-wrap mm-box--justify-content-flex-end mm-box--align-items-center"
                >
                  2 USDC on
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Polygon logo"
                        class="mm-avatar-network__network-image"
                        src="./images/pol-token.svg"
                      />
                    </div>
                    Polygon
                  </div>
                </div>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Total gas fee
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box currency-display-component mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
                  title="0.004455 ETH"
                >
                  <span
                    class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
                    data-testid="account-value-and-suffix"
                  >
                    0.004455
                  </span>
                  <span
                    class="mm-box mm-text currency-display-component__suffix mm-text--inherit mm-box--margin-inline-start-1 mm-box--color-text-default"
                  >
                    ETH
                  </span>
                </div>
              </p>
            </div>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Nonce
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                3
              </p>
            </div>
            <div
              class="transaction-activity-log transaction-list-item-details__transaction-activity-log"
            >
              <div
                class="transaction-activity-log__title"
              >
                Activity log
              </div>
              <div
                class="transaction-activity-log__activities-container"
              >
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/add.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction created with a value of 0 ETH at 17:43 on 6/20/2025."
                    >
                      Transaction created with a value of 0 ETH at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/arrow-up.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction submitted with estimated gas fee of 0 ETH at 17:43 on 6/20/2025."
                    >
                      Transaction submitted with estimated gas fee of 0 ETH at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/check.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction confirmed at 17:43 on 6/20/2025."
                    >
                      Transaction confirmed at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`transaction-details bridge snapshots should render pending bridge snapshot 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="bridge__container"
    >
      <div
        class="mm-box mm-header-base multichain-page-header bridge__header mm-box--padding-4 mm-box--display-flex mm-box--justify-content-center mm-box--width-full"
      >
        <div
          class="mm-box"
          style="min-width: 0px;"
        >
          <button
            aria-label="Back"
            class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/arrow-left.svg');"
            />
          </button>
        </div>
        <div
          class="mm-box"
        >
          <p
            class="mm-box mm-text mm-text--body-md-bold mm-text--ellipsis mm-text--text-align-center mm-box--padding-inline-start-8 mm-box--padding-inline-end-8 mm-box--display-block mm-box--color-text-default"
          >
            Bridge
             details
          </p>
        </div>
      </div>
      <div
        class="mm-box multichain-page-content bridge-transaction-details__content mm-box--padding-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--height-full"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
        >
          <div
            class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
          >
            <span
              class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
              style="mask-image: url('./images/icons/danger.svg');"
            />
            <div
              class="mm-box mm-box--min-width-0"
            >
              <p
                class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
              >
                Has it been longer than 3 hours?
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--display-flex mm-box--align-items-center mm-box--color-text-default"
              >
                Reach out to
                 
                <a
                  class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://support.metamask.io"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  MetaMask Support
                </a>
                .
              </p>
            </div>
          </div>
          <div
            class="mm-box bridge-transaction-details__step-grid"
          >
            <div
              class="mm-box"
              style="position: relative;"
            >
              <div
                class="mm-box bridge-transaction-details__icon-loading mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-primary-muted mm-box--rounded-full"
                style="width: 2rem; height: 2rem;"
              />
              <span
                class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block"
                style="height: 12px; width: 12px; border-radius: 50%; z-index: 1; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); border-width: 2px;"
              />
            </div>
            <div
              class="mm-box bridge-transaction-details__step-grid--desc mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                05:43 PM
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-default"
              >
                Receiving USDC on OP Mainnet
              </p>
            </div>
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-xl mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
            >
              View on PolygonScan
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/export.svg');"
              />
            </button>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-xl mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
            >
              View on Optimism Explorer
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/export.svg');"
              />
            </button>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Status
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--text-transform-capitalize mm-box--color-warning-default"
                >
                  pending
                </p>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Bridging
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-wrap-wrap mm-box--justify-content-flex-end mm-box--align-items-center"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Polygon logo"
                        class="mm-avatar-network__network-image"
                        src="./images/pol-token.svg"
                      />
                    </div>
                    Polygon
                  </div>
                  <span
                    class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                    style="mask-image: url('./images/icons/arrow-2-right.svg');"
                  />
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="OP Mainnet logo"
                        class="mm-avatar-network__network-image"
                        src="./images/optimism.svg"
                      />
                    </div>
                    OP Mainnet
                  </div>
                </div>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Time stamp
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                Jun 20, 2025 at 05:43 PM
              </p>
            </div>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                You sent
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-wrap-wrap mm-box--justify-content-flex-end mm-box--align-items-center"
                >
                  2 USDC on
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Polygon logo"
                        class="mm-avatar-network__network-image"
                        src="./images/pol-token.svg"
                      />
                    </div>
                    Polygon
                  </div>
                </div>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Total gas fee
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                <div
                  class="mm-box currency-display-component mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
                  title="0.004455 ETH"
                >
                  <span
                    class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
                    data-testid="account-value-and-suffix"
                  >
                    0.004455
                  </span>
                  <span
                    class="mm-box mm-text currency-display-component__suffix mm-text--inherit mm-box--margin-inline-start-1 mm-box--color-text-default"
                  >
                    ETH
                  </span>
                </div>
              </p>
            </div>
          </div>
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              style="height: 1px; margin-left: -8px; margin-right: -8px;"
            />
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--padding-right-1 mm-box--width-1/4 mm-box--color-text-default"
              >
                Nonce
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--padding-left-1 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--width-3/4 mm-box--color-text-default"
              >
                3
              </p>
            </div>
            <div
              class="transaction-activity-log transaction-list-item-details__transaction-activity-log"
            >
              <div
                class="transaction-activity-log__title"
              >
                Activity log
              </div>
              <div
                class="transaction-activity-log__activities-container"
              >
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/add.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction created with a value of 0 ETH at 17:43 on 6/20/2025."
                    >
                      Transaction created with a value of 0 ETH at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/arrow-up.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction submitted with estimated gas fee of 0 ETH at 17:43 on 6/20/2025."
                    >
                      Transaction submitted with estimated gas fee of 0 ETH at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
                <div
                  class="transaction-activity-log__activity"
                >
                  <div
                    class="transaction-activity-log-icon transaction-activity-log__activity-icon"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
                      style="mask-image: url('./images/icons/check.svg');"
                    />
                  </div>
                  <div
                    class="transaction-activity-log__entry-container"
                  >
                    <div
                      class="transaction-activity-log__activity-text"
                      title="Transaction confirmed at 17:43 on 6/20/2025."
                    >
                      Transaction confirmed at 17:43 on 6/20/2025.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
